[package]
name = "sd-daemon-rs"
version = "0.1.0"
authors = ["Josh Abraham <sinisterpatrician@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sd_daemon"
path = "src/lib.rs"

[[bin]]
name = "rdaemon"
path = "src/bin.rs"

[dependencies]
nix = "0.15.0"
